--- a/friends.html
+++ b/friends.html
@@ -101,10 +101,16 @@
                 <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
        </ul>
    </nav>
-        
+   <div id="splash-screen">
+    <i class="fas fa-comment"></i>
+   </div>     
 
-        <script src="https://kit.fontawesome.com/6478f529f2.js"
-        crossorigin="anonymous"></script>
+   <div id="no-mobile">
+       <span>Your screen is to bigㅜㅜ</span>
+   </div>
+
+    <script src="https://kit.fontawesome.com/6478f529f2.js"
+     crossorigin="anonymous"></script>
 
 
 </body>
