--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <script src="https://kit.fontawesome.com/6478f529f2.js"
         crossorigin="anonymous"></script>
 
-
+        <div id="no-mobile">
+            <span>Your screen is to bigㅜㅜ</span>
+        </div>
 </body>
 </html>
