--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat</title>
+    <title>Settings</title>
 </head>
 <body>
     <div class="status-bar">
@@ -23,43 +23,44 @@
         </div>
     </div>
 
-    <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
-        <div class="screen-header__icons">
-            <span>
-                <i class="fas fa-search fa-lg"></i>
-            </span>
-            <span>
-                <i class="fas fa-comment-dots fa-lg"></i>
-            </span>
-            <span>
-                <i class="fas fa-music fa-lg"></i>
-            </span>
-            <span>
-                <i class="fas fa-cog fa-lg"></i>
-            </span>
+    <header class="alt-header">
+        <div class="alt-header__column">
+            <a href="more.html">
+            <i class="fas fa-angle-left fa-3x"></i></a>
+        </div>
+        <div class="alt-header__column">
+            <h1 class="alt-header__title">Settings</h1>
+        </div>
+        <div class="alt-header__column">
+            <span><i class="fas fa-search fa-lg"></i></span>
         </div>
     </header>
 
 
     <main class="main-screen">
-        <a href="chat.html"
-        <div class="user-component">
-            <div class="user-component__column">
-                <img src="https://avatars.githubusercontent.com/u/96097248?v=4" class="user-component__avatar" />
-            <div class="user-component__text">
-                <h4 class="user-component__title">Nicolas</h4>
-               <h6 class="user-component__subtitle">Please check my Kokoa Account Info</h6>   
-            </div>
-            </div>
-            <div class="user-component__column">
-                <span class="user-component__time">21:22</span>
-                <div class="badge">1</div>
-    
-            </div>
-        </div>
-    </a>
-        
+        <ul class="settings-list">
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-bullhorn"></i>
+                    <span>Notices</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-flask"></i>
+                    <span>Kokoa Lab</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                <i class="fas fa-info-circle"></i>
+                <span>Version</span>
+                </div>
+                <div class="settings__setting-column">Latest Version</div>
+            </li>
+        </ul>
     </main>
 
 
@@ -74,7 +75,7 @@
            <li class="nav__btn">
                <a class="nav__link" href="chats.html">
                 <span class="nav__notification badge">1</span>
-                <i class="fas fa-comment fa-2x"></i></a></li>
+                <i class="far fa-comment fa-2x"></i></a></li>
            <li class="nav__btn">
                <a class="nav__link" href="find.html">
                 <i class="fas fa-search fa-2x"></i></a></li>
@@ -88,8 +89,6 @@
         <script src="https://kit.fontawesome.com/6478f529f2.js"
         crossorigin="anonymous"></script>
 
-        <div id="no-mobile">
-            <span>Your screen is to bigㅜㅜ</span>
-        </div>
+
 </body>
 </html>
