--- a/more.html
+++ b/more.html
@@ -110,7 +110,7 @@
         <script src="https://kit.fontawesome.com/6478f529f2.js"
         crossorigin="anonymous"></script>
         <div id="no-mobile">
-          <span>Your screen is to bigㅜㅜ</span>
+          <span>Your screen is to largeㅜㅜ</span>
       </div>
 
 </body>
